demo-output/my-api/k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: http
      port: 6379
      targetPort: 6379
      protocol: TCP
