demo-output/my-api/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-api
  labels:
    app: my-api
spec:
  type: ClusterIP
  selector:
    app: my-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
